2013-12-07  Andrey Borzenkov <arvidjaar@gmail.com>

	Revert commit 69ca97c820, it caused failures when using OS device name
	in grub-install. Instead just strip off parenthesis in grub-install
	if (hdX) was passed.

2013-12-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install.c (push_partmap_module): Add helper to convert
	partmap names to module names and use it in probe_mods(). Fixes
	failure to find partmap modules in diskfilter case.

2013-12-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Make unifont mandatory on coreboot.

2013-12-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Skip unifont 6.3 pcf and bdf.

2013-12-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Remove partial font files if generation failed.

2013-12-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/misc.c (grub_qsort_strcmp): Add qsort helper function to sort
	strings.
	* include/grub/util/misc.h: Define it ...
	* util/grub-install.c (device_map_check_duplicates): ... and use it.

2013-12-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/30_os-prober.in: Fix use of grub-probe instead of
	${grub_probe}.

2013-12-06  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -mlong-calls when compiling with clang.

2013-12-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix a typo.

2013-12-06  Vladimir Serbinenko  <phcoder@gmail.com>

	Revamp relocation handling.

	Move more code to common dl.c. Add missing veneers for arm and arm64.
	Decreases kernel size by 70 bytes on i386-pc (40-50 compressed)

2013-12-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c: Fix reloc section generation for ia64.

2013-12-05  Mike Gilbert  <floppym@gentoo.org>

	* INSTALL: Raise minimum python version to 2.6.
	* gentpl.py: Use python3-style print function.

2013-12-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.c: Mention Boot* variable.

2013-12-05  Colin Watson  <cjwatson@ubuntu.com>
